--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,8 @@
-<nav class="navbar navbar-inverse">
+<div class="container">
+  <%= image_tag 'logo.png' %>
+</div>
+</br>
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <%= link_to "Strona Główna",  static_pages_home_path, class: 'navbar-brand' %>
@@ -8,12 +12,12 @@
         <% end %>
         <%= link_to "Zgłoszenia", zgloszenies_path, class: 'navbar-brand' %>
         <%= link_to "Edycja konta", edit_user_registration_path, class: 'navbar-brand' %>
-        <%= link_to "Wylogowanie", destroy_user_session_path, method: :delete, class: 'navbar-brand' %>
         <% if current_user.admin? %>
           <%= link_to "Zaplecze", static_pages_paneladmina_path, class: 'navbar-brand' %>
           <%= link_to "Statystyki", static_pages_statystyki_path, class: 'navbar-brand' %>
         <% else %>
         <% end %>
+        <%= link_to "Wylogowanie", destroy_user_session_path, method: :delete, class: 'navbar-brand' %>
         <% else %>
         <%= link_to "Logowanie", new_user_session_url, class: 'navbar-brand' %>
         <%= link_to "Rejestracja", new_user_registration_path, class: 'navbar-brand' %>
@@ -21,4 +25,3 @@
     </div>
   </div>
 </nav>
-
