--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
 <%= devise_error_messages! %><br />
 
-<div class="form-gap"></div>
+<div class="form-gap">
 <div class="container">
 <div class="row">
 <div class="col-md-4 col-md-offset-4">
@@ -11,7 +11,6 @@
 <h3><i class="fa fa-lock fa-4x"></i></h3>
 <h2 class="text-center">Zapomniałeś hasła?</h2>
 <div class="panel-body">
-
   <form id="register-form" role="form" autocomplete="off" class="form" method="post">
     <div class="form-group">
       <div class="input-group">
