--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,7 +9,7 @@
 <div class="panel-body">
 <div class="text-center">
 <h3><i class="fa fa-lock fa-4x"></i></h3>
-<h2 class="text-center">Zapomniałeś hasła?</h2>
+<center><h2>Zapomniałeś hasła?</h2></center>
 <div class="panel-body">
   <form id="register-form" role="form" autocomplete="off" class="form" method="post">
     <div class="form-group">
@@ -22,6 +22,7 @@
     <%= f.submit "Wyślij", class: "btn btn-lg btn-primary btn-block" %>
     </div>
   </form>
+</div>
 </div>
 </div>
 </div>
