--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,51 +1,53 @@
 <div class="container">
-<div class="row">
-  <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<%= devise_error_messages! %>
-<form role="form">
- <h2>Rejestracja</h2>
- <hr class="colorgraph">
- <div class="row">
-  <div class="col-xs-12 col-sm-6 col-md-6">
-   <div class="form-group">
-   <%= f.text_field :first_name, autofocus: true, class:"form-control input-lg", placeholder: "Imie" %>
-   </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <h2>Rejestracja</h2>
+      <hr class="colorgraph">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+            <%= f.text_field :first_name, autofocus: true, class:"form-control input-lg", placeholder: "Imie" %>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+            <%= f.text_field :last_name, class:"form-control input-lg", placeholder: "Nazwisko" %>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.email_field :email, autofocus: true, class:"form-control input-lg", placeholder: "Email" %>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+            <% if @minimum_password_length %>
+            <em>(Minimum <%= @minimum_password_length %> znaków.)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "off", class:"form-control input-lg",placeholder: "Hasło" %>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <br/>
+          <div class="form-group">
+            <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control input-lg", placeholder: "Powtórz hasło"  %>
+          </div>
+        </div>
+      </div>
+      <hr class="colorgraph">
+      <div class="row">
+        <div class="form-group">
+          <div class="col-xs-12 col-md-6">
+            <%= f.submit "Rejestracja", class: "btn btn-primary btn-block btn-lg"%>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <%= link_to "Zaloguj się", new_session_path(resource_name), class: "btn btn-success btn-block btn-lg"  %>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    </div>
   </div>
-  <div class="col-xs-12 col-sm-6 col-md-6">
-   <div class="form-group">
-   <%= f.text_field :last_name, class:"form-control input-lg", placeholder: "Nazwisko" %>
-   </div>
-  </div>
- </div>
- <div class="form-group">
- <%= f.email_field :email, autofocus: true, class:"form-control input-lg", placeholder: "Email" %>
- </div>
- <div class="row">
-  <div class="col-xs-12 col-sm-6 col-md-6">
-   <div class="form-group">
-   <% if @minimum_password_length %>
-   <em>(Minimum <%= @minimum_password_length %> znaków.)</em>
-   <% end %><br />
-   <%= f.password_field :password, autocomplete: "off", class:"form-control input-lg",placeholder: "Hasło" %>
-   </div>
-  </div>
-  <div class="col-xs-12 col-sm-6 col-md-6"><br/>
-   <div class="form-group">
-   <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control input-lg", placeholder: "Powtórz hasło"  %>
-   </div>
-  </div>
- </div>
-
- <hr class="colorgraph">
- <div class="row">
- <div class="form-group">
-  <div class="col-xs-12 col-md-6">
-  <%= f.submit "Rejestracja", class: "btn btn-primary btn-block btn-lg"%></div><% end %>
-  <div class="col-xs-12 col-md-6">
-  <%= link_to "Zaloguj się", new_session_path(resource_name), class: "btn btn-success btn-block btn-lg"  %></div>
- </div>
-</div>
-</div>
-</div>
 </div>
